# sha512-crypt

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml  test.yml
.github/workflows/scripts/: check-release-version.bash  create-linux-package.bash  create-macos-package.bash  create-windows-package.ps1
cmake/modules/: SetDefaultBuildType.cmake  SetDefaultInstallPrefix.cmake
lib/: CMakeLists.txt
lib/include/sha512-crypt/: sha512-crypt.hpp
lib/source/: sha512-crypt.cpp
test/: CMakeLists.txt
test/data/: generate-test-data.bash
test/source/: main.cpp  sha512-crypt.cpp
